force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/sma__MAArcGISBatchPushSetting__c.object-meta.xml
<CustomObject>
    <label>MapAnything ArcGIS Batch Push Setting</label>
    <nameField>
        <label>MapAnything ArcGIS Batch Push Setting Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything ArcGIS Batch Push Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>