force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/fields/sma__EnableLog__c.field-meta.xml
<CustomField>
    <fullName>sma__EnableLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableLog</label>
    <type>Checkbox</type>
</CustomField>