force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/fields/sma__FeatureLayerURL__c.field-meta.xml
<CustomField>
    <fullName>sma__FeatureLayerURL__c</fullName>
    <label>FeatureLayerURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>