force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/fields/sma__LayerID__c.field-meta.xml
<CustomField>
    <fullName>sma__LayerID__c</fullName>
    <label>LayerID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>