force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/fields/sma__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>sma__TemplateName__c</fullName>
    <label>TemplateName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>