force-app/main/default/objects/sma__MAArcGISBatchPushSetting__c/fields/sma__Token__c.field-meta.xml
<CustomField>
    <fullName>sma__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>